--- a/Dmd/src/main/webapp/css/signon.css
+++ b/Dmd/src/main/webapp/css/signon.css
@@ -69,6 +69,13 @@ button.ghost {
   border-color: #FFFFFF;
 }
 
+button.btnid {
+	border-radius: 5px;
+	font-size: 10px;
+ 	padding: 5px 5px;
+}
+
+
 form {
   background-color: #FFFFFF;
   display: flex;
