--- a/Dmd/src/main/webapp/css/mypage.css
+++ b/Dmd/src/main/webapp/css/mypage.css
@@ -180,6 +180,25 @@ div{
   margin-bottom: 2px;
 }
 
+/* mypage profile */
+.box {
+    width: 70px;
+    height: 70px; 
+    border-radius: 70%;
+    overflow: hidden;
+}
+.profile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* info icon */
+.info {
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+}
 
 /*  */
 .listContainer .item:hover{
